<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/resta"
    tools:context=".MainActivity3">

    <Button
        android:id="@+id/btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="77dp"
        android:background="@android:drawable/btn_star"
        android:text="@string/btn5"
        app:layout_constraintEnd_toEndOf="@+id/btn6"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@android:drawable/btn_star"
        android:text="@string/btn4"
        app:layout_constraintBottom_toBottomOf="@+id/btn5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn5" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:background="@android:drawable/btn_star"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn5"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/btn6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginBottom="21dp"
        android:text="@string/textview5"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/btn4"
        app:layout_constraintStart_toStartOf="@+id/btn4" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginBottom="21dp"
        android:text="@string/textview6"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/btn5"
        app:layout_constraintStart_toStartOf="@+id/btn5" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="213dp"
        android:text="@string/textview8"
        android:textColor="@android:color/holo_green_light"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn6"
        app:layout_constraintStart_toEndOf="@+id/btn6" />
</androidx.constraintlayout.widget.ConstraintLayout>